// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action should generate actions 1`] = `
Object {
  "buildTeam": Object {
    "args": Object {
      "input": Object {
        "description": "Input argument for this action",
        "type": "BuildTeamInput!",
      },
    },
    "description": "build a team
",
    "resolve": [Function],
    "type": "BuildTeamOutput",
  },
  "newSimpleAction": Object {
    "args": Object {
      "input": Object {
        "description": "Input argument for this action",
        "type": "NewSimpleActionInput!",
      },
    },
    "description": "do something
",
    "resolve": [Function],
    "type": "NewSimpleActionOutput",
  },
  "noInputAction": Object {
    "args": Object {
      "input": Object {
        "description": "Input argument for this action",
        "type": "NoInputActionInput",
      },
    },
    "description": "do something
",
    "resolve": [Function],
    "type": "NoInputActionOutput",
  },
  "noOutputAction": Object {
    "args": Object {
      "input": Object {
        "description": "Input argument for this action",
        "type": "NoOutputActionInput!",
      },
    },
    "description": "do something
",
    "resolve": [Function],
    "type": "NoOutputActionOutput",
  },
}
`;

exports[`action should generate actions 2`] = `
Object {
  "clientMutationId": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "clientMutationId",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "String",
  },
  "result": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "result",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "NewSimpleActionDataOutput",
  },
}
`;

exports[`action should generate actions 3`] = `
Object {
  "luckyNumber": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": "The perfect lucky number for the given name",
    "extensions": undefined,
    "isDeprecated": false,
    "name": "luckyNumber",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Int",
  },
}
`;

exports[`action should generate actions 4`] = `
Object {
  "clientMutationId": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "clientMutationId",
    "type": "String",
  },
  "data": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "data",
    "type": "NewSimpleActionDataInput!",
  },
}
`;

exports[`action should generate actions 5`] = `
Object {
  "firstName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": "First name",
    "extensions": undefined,
    "name": "firstName",
    "type": "String",
  },
  "lastName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": "Last name",
    "extensions": undefined,
    "name": "lastName",
    "type": "String!",
  },
}
`;

exports[`action should generate actions 6`] = `
Object {
  "clientMutationId": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "clientMutationId",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "String",
  },
  "result": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "result",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "NoInputActionDataOutput",
  },
}
`;

exports[`action should generate actions 7`] = `
Object {
  "luckyNumber": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": "The perfect lucky number for the given name",
    "extensions": undefined,
    "isDeprecated": false,
    "name": "luckyNumber",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "Int",
  },
}
`;

exports[`action should generate actions 8`] = `
Object {
  "clientMutationId": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "clientMutationId",
    "type": "String",
  },
}
`;

exports[`action should generate actions 9`] = `
Object {
  "clientMutationId": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "clientMutationId",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "String",
  },
}
`;

exports[`action should generate actions 10`] = `
Object {
  "clientMutationId": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "clientMutationId",
    "type": "String",
  },
  "data": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "data",
    "type": "NoOutputActionDataInput!",
  },
}
`;

exports[`action should generate actions 11`] = `
Object {
  "firstName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": "First name",
    "extensions": undefined,
    "name": "firstName",
    "type": "String",
  },
  "lastName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": "Last name",
    "extensions": undefined,
    "name": "lastName",
    "type": "String!",
  },
}
`;

exports[`action should generate actions 12`] = `
Object {
  "clientMutationId": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "clientMutationId",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "String",
  },
  "result": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": undefined,
    "extensions": undefined,
    "isDeprecated": false,
    "name": "result",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "BuildTeamDataOutput",
  },
}
`;

exports[`action should generate actions 13`] = `
Object {
  "result": Object {
    "args": Array [],
    "astNode": undefined,
    "deprecationReason": undefined,
    "description": "List of player",
    "extensions": undefined,
    "isDeprecated": false,
    "name": "result",
    "resolve": undefined,
    "subscribe": undefined,
    "type": "BuildTeamResultL2DataOutput",
  },
}
`;

exports[`action should generate actions 14`] = `
Object {
  "clientMutationId": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "clientMutationId",
    "type": "String",
  },
  "data": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": undefined,
    "extensions": undefined,
    "name": "data",
    "type": "BuildTeamDataInput!",
  },
}
`;

exports[`action should generate actions 15`] = `
Object {
  "players": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": "List of player",
    "extensions": undefined,
    "name": "players",
    "type": "BuildTeamPlayersL2DataInput",
  },
  "teamName": Object {
    "astNode": undefined,
    "defaultValue": undefined,
    "description": "Name of the team",
    "extensions": undefined,
    "name": "teamName",
    "type": "String",
  },
}
`;
